update docs and gradle file